<resources>
    <string name="app_name">OB_Wheels</string>
    <string name="calender_based_calculator">Calender based calculator</string>
    <string name="traditional_ob_wheels">Traditional OB wheels</string>
    <string name="setting_edd_from_lmp_and_sono">Setting EDD from LMP and sono</string>
    <string name="determine_edd_and_ega_vie_lmp_sono_etc">Determine EDD and EGA vie LMP, Sono, etc.</string>
    <string name="it_s_the_real_wheel_clunky_but_accurate">It\'s the real wheel, clunky but accurate</string>
    <string name="scheme_for_using_lmp_and_sonogram"><![CDATA[scheme for using LMP and sonogram to determine final EDD (for students & residents)]]></string>
    <string name="Choose_a_resource">Choose a resource for determining estimated due date (EDD), estimated gestational age (EGA), and setting a final EDD.</string>
    <string name="Setting_EDD_text1"><![CDATA[ACOG 2014 (see ref) dating scheme. Discussion follows.]]></string>
    <string name="Settind_EDD_text2">EGA via LMP</string>
    <string name="Setting_EDD_text3"><![CDATA[Use Sono-EDD if differs from LMP-EDD by:]]></string>
    <string name="_8_6_7_wks">≤ 8 6/7 wks</string>
    <string name="_5_days"><![CDATA[> 5 days]]></string>
    <string name="_9_to_15_6_7_wks">9 to 15 6/7 wks</string>
    <string name="_7_days"><![CDATA[> 7 days]]></string>
    <string name="_16_to_21_6_7_wks">16 to 21 6/7 wks</string>
    <string name="_10_days"><![CDATA[> 10 days]]></string>
    <string name="_22_to_27_6_7_wks">22 to 27 6/7 wks</string>
    <string name="_14_days"><![CDATA[> 14 days]]></string>
    <string name="_28_wks">≥ 28 wks</string>
    <string name="_21_days_and"><![CDATA[> 21 days and]]></string>
    <string name="proceed_cautiously">proceed cautiously</string>
    <string name="Setting_EDD_text4">--------------------------------------------------------------------------</string>
    <string name="Setting_EDD_text5"><![CDATA[The determination of a pregnant woman’s due date is of great importance to pregnancy care. All expectations and evaluations and management considerations depend on knowing where one stands in the time course of pregnancy. This is a short review mainly for students and residents on how to determine the estimated due date (EDD). There are nuances (i.e. varying cycle length) and special situations (i.e. assisted reproductive techniques) which are outside the scope of this simple discussion which focuses on the typical pregnant woman. A clinician typically has two pieces of data from which to estimate the due date. First is the first day of the last normal menstrual period (LMP). By longstanding convention, one adds 280 days, that is 40 weeks, to the first day of the LMP and arrives at the first estimation of the due date. We clinicians have a preference for clinical data. But sonographic measurement of estimated gestational age (EGA) and extrapolation to an EDD is also quite accurate. Thus sonography is typically the second piece of data which informs EDD determination. A good case can be made for routinely getting an early sonogram for the express purpose of EDD determination [Cochrane 2010, see references]. The earlier the sonogram, the more accurate it is for assigning an EDD. The earliest sonogram measuring a crown-rump length (but not earlier) is optimal. Often the LMP-based EDD will differ from the Sono-based EDD. How can one reconcile these and arrive at a single final EDD? Again, start with the information obtained on history of the LMP to get the LMP-based EDD. Then compare that LMP-based EDD to a Sono-based EDD from the earilest sonogram, preferably one measuring a crown-rump length. Given that sonograms are pretty accurate and LMPs can be inaccurate [Wegienka 2005, Bennett 2004, see references], if the Sono-based EDD is quite different from the LMP-based EDD, then dismiss the LMP-based EDD as inaccurate and let the Sono-based EDD prevail as the final EDD. However, if the Sono-based EDD is pretty close to the LMP-based EDD, the LMP-based EDD prevails and the sonogram is said to “confirm” the LMP-based EDD. How close is “pretty close” and how divergent is “quite different”? ACOG (2014, see references) gives the following scheme Use Sono-EDD if differs EGA via LMP from LMP-EDD by: ≤ 8 6/7 wks > 5 days 9 to 15 6/7 wks > 7 days 16 to 21 6/7 wks > 10 days 22 to 27 6/7 wks > 14 days ≥ 28 wks > 21 days and proceed cautiously There are many schemes for reconciling LMP & Sono-based due dates into a final due date. I am unaware of evidence comparing any one scheme to another. I have no opinion on whether this scheme (ACOG\'s) is superior to any other. But I do know that members of a practice must share a single approach to so as to avoid argument over this cornerstone of pregnancy care. I have noted this scheme here so that my residents can easily and effectively refer to this single scheme. You, of course, can use any scheme you prefer.]]></string>
    <string name="reconcile_lmp_sono_edd_s"><![CDATA[ⓘ reconcile LMP & Sono EDD\'s]]></string>
    <string name="title_activity_ob_landing">ObLandingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
