<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/Setting_EDD_text1"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/Settind_EDD_text2"/>


        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="46dp"
            android:text="@string/Setting_EDD_text3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/_8_6_7_wks"/>


        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="46dp"
            android:text="@string/_5_days"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/_9_to_15_6_7_wks"/>


        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="46dp"
            android:text="@string/_7_days"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/_16_to_21_6_7_wks"/>


        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="46dp"
            android:text="@string/_10_days"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/_22_to_27_6_7_wks"/>


        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="46dp"
            android:text="@string/_14_days"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/_28_wks"/>


        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="46dp"
            android:text="@string/_21_days_and"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:text=""/>


        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="46dp"
            android:text="@string/proceed_cautiously"/>

    </LinearLayout>

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/Setting_EDD_text4"/>


    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/Setting_EDD_text5"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="On Setting EDD Layout"/>
</LinearLayout>
