<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calender_based_calculator" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sdgf sfdgkjfgjsd gfksd f" />

    <Button
        android:id="@+id/button_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertial_margin"
        android:text="@string/traditional_ob_wheels" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sdgf sfdgkjfgjsd gfksd f" />

    <Button
        android:id="@+id/button_setting_edd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertial_margin"
        android:text="@string/setting_edd_from_lmp_and_sono" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sdgf sfdgkjfgjsd gfksd f" />
</LinearLayout>